* Room :
	- SetLavaIntensity
	- [Get/Set]RainIntensity
	- [Get/Set]LightningIntensity
	- DoLightningStrike
	- GetNumRainSpawners
* Game :
	- ShowGenericLeaderboard
* HUD:
	- [Get/Set]BossHPBarFill
	- GetCardsPillsSprite
	- GetCoopMenuSprite
	- GetCraftingSprite
	- GetFortuneSprite
	- GetHeartsSprite
	- GetInventorySprite
	- GetPoopSpellSprite
	- GetStreakSprite
* ScoreSheet :
	- AddFinishedStage
* PauseMenu:
	- Added a PauseMenu Global that holds all its related stuff
	- Added a GetMyStuffSprite that returns the sprite used for the MyStuff items
	- Added a GetSelectedElement/SetSelectedElement similar to the one seen in other menus
	- Added GetState/SetState
* MusicManager:
	- Get/SetCurrentPitch
* Unlocks
	- Added support for unlockable items using the xml achievement attribute
	- Added support for unlockable trinkets using the xml achievement attribute
	- Added support for unlockable cards using the xml achievement attribute
	- Added support for unlockable pilleffects using the xml achievement attribute?
* Secrets Screen
	- This screen will now display modded achievements
	- Made it so the achievement attribute 'hidden' hides achievements from this menu
* XMLData :
	- Added GetModById since the normal GetEntryById wont give the expected result when you want to use actual mod ids
	- Added GetBossColorByTypeVarSub(t,v,s) that gives you the boss color that will be used on a certain typevarsub combo
* ImGui:
	- Pressing enter in an empty console input will now close the console and imgui, to mimic the behavior of the vanilla console
	- Fixed notifications being behind the menu bar
	- Fixed debug console loosing focus when other windows are present
/newline/
Modified:
* PlayerManager :
	- FirstCollectibleOwner(CollectibleType Collectible, boolean LazSharedGlobalTag = true)
	- FirstTrinketOwner(TrinketType Trinket, RNG RNG = nil, boolean LazSharedGlobalTag = true)
* OptionsMenu :